[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
socketioxide = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
url = "2.5"
futures = "0.3"
urlencoding = "2"
maxminddb = "0.23"
dns-lookup = "2.1"
